--- a/DBVisualisation/DBVisualisation.csproj
+++ b/DBVisualisation/DBVisualisation.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EFtest\EFtest.csproj" />
+  </ItemGroup>
+
 </Project>
